--- a/app/views/ueditor_rails/dialogs/image.html.erb
+++ b/app/views/ueditor_rails/dialogs/image.html.erb
@@ -188,7 +188,8 @@
        * 其中有一个特殊的保留key值为action，若设置，可以更改本次提交的处理地址
        */
       var postParams = {
-        "<%= request_forgery_protection_token %>":"<%= form_authenticity_token %>",
+        "<%= key = Rails.application.config.session_options[:key] %>" : "<%= cookies[key] %>",
+        "<%= request_forgery_protection_token %>" : "<%= form_authenticity_token %>",
         "dir":baidu.g("savePath").value
       };
       imageUploader.setPostParams(postParams);
