--- a/app/views/ueditor_rails/dialogs/attachment.html.erb
+++ b/app/views/ueditor_rails/dialogs/attachment.html.erb
@@ -31,7 +31,10 @@
       file_post_name:editor.options.fileFieldName,      //向后台提交的表单名
       flash_url:"<%= swfupload_path %>",
       flash9_url:"<%= swfupload_fp9_path %>",
-      post_params:{"<%= request_forgery_protection_token %>":"<%= form_authenticity_token %>"}, //解决session丢失问题
+      post_params:{
+        "<%= key = Rails.application.config.session_options[:key] %>" : "<%= cookies[key] %>",
+        "<%= request_forgery_protection_token %>" : "<%= form_authenticity_token %>"
+      }, //解决session丢失问题
       file_size_limit:"100 MB",                                 //文件大小限制，此处仅是前端flash选择时候的限制，具体还需要和后端结合判断
       file_types:"*.*",                                         //允许的扩展名，多个扩展名之间用分号隔开，支持*通配符
       file_types_description:"All Files",                      //扩展名描述
